expand zero alloc